# swift-on-android-demo

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/karlo/ceh/swiftonandroiddemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  swiftbridge.cpp
app/src/main/java/com/karlo/ceh/swiftonandroiddemo/: MainActivity.kt  SwiftBridge.kt
app/src/main/java/com/karlo/ceh/swiftonandroiddemo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/karlo/ceh/swiftonandroiddemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
swift/: info.md
swift/GenerateExceptionLib/: Package.swift
swift/GenerateExceptionLib/Sources/GenerateExceptionLib/: GenerateExceptionLib.swift
swift/GenerateExceptionLib/Tests/GenerateExceptionLibTests/: GenerateExceptionLibTests.swift
swift/HelloWorldLib/: Package.swift
swift/HelloWorldLib/Sources/HelloWorldLib/: HelloWorldLib.swift
swift/HelloWorldLib/Tests/HelloWorldLibTests/: HelloWorldLibTests.swift
swift/JustLogsLib/: Package.swift
swift/JustLogsLib/Sources/JustLogsLib/: JustLogsLib.swift
